# tai-assignment2-group8

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  changelengthsample.py  changenchartrain.py  notebook.ipynb  run_test.sh  run_train.sh
datasets/: .gitignore  changelengthsample.py  changenchartrain.py  daigt-v4.py  gpt-wiki-intro.py  open-gpt-text.py
example/: alphabet.txt  no.txt  no.txt.cache  no.txt.order6.cache  test.txt  yes.txt  yes.txt.cache  yes.txt.order6.cache
src/: draft.py  main.cpp  was_chatted.cpp
src/markov/: markov_analyser.cpp  markov_analyser.h  markov_model.cpp  markov_model.h
src/model/: MarkovModel  MarkovModel.cpp  markov_model.cpp  markow_model.h
src/reader/: FileReader.cpp
src/util/: csv_logger.cpp  csv_logger.h  file_reader.cpp  file_reader.h  program_arguments.cpp  program_arguments.h
